--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@armin4fun/use-react-hooks",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "A React Hooks library build by rollup and typescript.",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.4",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.12",
